<resources>
    <string name="app_name">MyTaskManager</string>

    <string name="create_task">Create task</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="empty_field">Please, fill out this field.</string>
    <string name="backup">Backup</string>
    <string name="create_backup">Create backup</string>
    <string name="restore_from_backup">Restore from backup</string>
    <string name="title_activity_map">Map</string>
    <string name="set_location">Set location</string>
    <string name="location_not_specified">Location isn\'t specified.</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="set_start_time">Set start time</string>
    <string name="set_start_date">Set start date</string>
    <string name="set_end_time">Set end time</string>
    <string name="set_end_date">Set end date</string>
    <string name="location">Location</string>
    <string name="title_is_too_short">Title is too short.</string>
    <string name="take_or_select_photo">Take or select photo</string>
    <string name="fill_with_dummy_data">Fill with dummy data</string>
    <string name="clear_tasks">Clear tasks</string>
    <string name="exit">Exit</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="reset_start">Reset start</string>
    <string name="reset_end">Reset end</string>
    <string name="start">Start</string>
    <string name="finish">Finish</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="completed">Completed</string>
    <string name="clear_all_data">Clear all data?</string>
    <string name="clear_all">Clear all</string>
    <string name="exit_app_message">Press back button one more time to exit.</string>
    <string name="duration">Duration</string>
    <string name="hour">hour(s)</string>
    <string name="repeat">Repeat</string>
    <string name="start_date">Start Date</string>
    <string name="no_repeat">No repeat</string>
    <string name="once_a_hour">Once a hour</string>
    <string name="once_a_day">Once a day</string>
    <string name="once_a_week">Once a week</string>
    <string name="once_a_month">Once a month</string>
    <string name="once_a_year">Once a year</string>
    <string name="fifteen_minutes">15 minutes</string>
    <string name="half_of_hour">Half of hour</string>
    <string name="one_hour">1 hour</string>
    <string name="two_hours">2 hour</string>
    <string name="three_hours">3 hour</string>
    <string name="four_hours">4 hour</string>
    <string name="five_hours">5 hour</string>
    <string name="six_hours">6 hour</string>
    <string name="minutes">minutes</string>
    <string name="set_duration">Set duration</string>
    <string name="task_completed">Task completed.</string>
    <string name="active_task">Active task</string>
    <string name="task">Task</string>
    <string name="started_automatically">started automatically.</string>
    <string name="completed_automatically">completed automatically.</string>
    <string name="location_tracking_is_enabled">Location tracking is enabled</string>
    <string name="you_have">You have</string>
    <string name="pending_tasks">pending task(s)</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tasks">Tasks</string>
    <string name="taskEvent">Statistics</string>
    <string name="planned_start_time">Planned start time</string>
    <string name="actual_start_time">Actual start time</string>
    <string name="scheduled_duration">Scheduled duration</string>
    <string name="time_spent">Time spent</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="image_saving_error">Failed to save image.</string>
    <string name="image_loading_error">Failed to load image.</string>
    <string name="backups">Backups</string>
    <string name="manage_backups">Manage backups</string>
    <string name="creating_backup">Creating backup…</string>
    <string name="restoring_data">Restoring data…</string>
    <string name="backup_created_successfully">Backup created successfully</string>
    <string name="data_restored">Data restored</string>
    <string name="no_backups_found">No backups found</string>
    <string name="s">s</string>
    <string name="min">min</string>
    <string name="h">h</string>
    <string name="days">day(s)</string>
    <string name="no_planned_start_date">Planned start date is not specified</string>
    <string name="unknown_address">Unknown address</string>
    <string name="you_have_no_tasks">You have no tasks</string>
    <string name="delete_item_alert">Are you really want to delete this task?</string>
    <string name="failed_to_sign_in">Failed to sign in</string>
    <string name="enable_location_tracking">Enable location tracking</string>
    <string name="location_tracking_summary">Set option enabled to start and complete tasks with location automatically. Please, enable locations on your device to make this option work</string>
    <string name="duration_summary">Set default duration for all tasks</string>

    <string-array name="array_duration">
        <item>15 mins</item>
        <item>Half of hour</item>
        <item>1 hour</item>
        <item>2 hour</item>
        <item>3 hour</item>
        <item>4 hour</item>
        <item>5 hour</item>
        <item>6 hour</item>
    </string-array>

    <string-array name="array_duration_values">
        <item>0.25</item>
        <item>0.5</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
</resources>
