<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:icon="@drawable/cloud_upload"
        android:title="@string/backup"
        android:id="@+id/action_backup"/>

    <item android:icon="@drawable/ic_plus"
        app:showAsAction="never"
        android:title="@string/create_task"
        android:id="@+id/action_create_task"/>

    <item
        app:showAsAction="never"
        android:title="@string/fill_with_dummy_data"
        android:id="@+id/action_fill_list"/>

    <item
        android:title="@string/clear_tasks"
        app:showAsAction="never"
        android:id="@+id/action_clear_all"/>


    <item
        app:showAsAction="never"
        android:title="@string/exit"
        android:id="@+id/action_exit"/>


</menu>