<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <group>
        <item
            android:id="@+id/action_edit"
            android:icon="@drawable/ic_pencil"
            android:title="@string/edit"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/action_delete"
            android:title="@string/delete"
            app:showAsAction="never" />
    </group>

    <group
        android:id="@+id/group_reset_time">
        <item
            android:id="@+id/action_reset_start"
            android:title="@string/reset_start"
            app:showAsAction="never" />

        <item
            android:id="@+id/action_reset_end"
            android:title="@string/reset_end"
            app:showAsAction="never" />
    </group>
</menu>